<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">淘宝二手</string>
    <string name="username">账号:</string>
    <string name="password">密</string>
    <string name="password1">码:</string>
    <string name="verificationcode">验证码:</string>
    <string name="username_hint">淘宝网账号</string>
    <string name="password_hint">登录密码</string>
    <string name="verificationcode_hint">请输入</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="changeverificationcode">换一张</string>
    <string name="locate">支付密码:</string>
    <string name="locate_hint">支付宝支付密码</string>
    <string name="commit">提交</string>
</resources>
